# AngelaMCP

./: .env.docker  .env.example  .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  LICENSE  Makefile  QUICKSTART.md  README.md  claudedoc.md  clear.sh  fix.sh  install-angelamcp  install.py  pyproject.toml  pytest.ini  repomix-output.xml  requirements.txt  run-mcp.sh  setup  test_mcp.py
.github/workflows/: ci.yml
config/: __init__.py  settings.py
config/prompts/: __init__.py  claude_prompts.py  debate.yaml  debate_prompts.py  system_prompts.py
docker/: Dockerfile  docker-compose.yml
docker/postgres/: init.sql
docs/: Setup.md  Tree.md
scripts/: __init__.py  init_db.py  test_agents.py  verify_setup.py
src/: __init__.py  cli.py  main.py  mcp_server.py  mcp_server_fixed.py  mcp_server_simple.py
src/agents/: __init__.py  base.py  claude_agent.py  gemini_agent.py  openai_agent.py
src/orchestration/: __init__.py  debate.py  orchestrator.py  voting.py
src/orchestrator/: __init__.py  collaboration.py  debate.py  manager.py  task_analyzer.py  task_queue.py  voting.py
src/persistence/: __init__.py  cache.py  database.py  models.py  repositories.py
src/ui/: __init__.py  collaboration_ui.py  display.py  input_handler.py  streaming.py  terminal.py
src/utils/: __init__.py  exceptions.py  helpers.py  logger.py  metrics.py
tests/: README.md  __init__.py  conftest.py  demo_angelamcp.py  requirements-test.txt  test_core_features.py  test_database_working.py  test_docker.py  test_integration.py  test_simple.py  validate_angelamcp.py
tests/integration/: test_collaboration.py  test_full_system.py
tests/scripts/: __init__.py  init_db.py  migrate.py  monitor.py  performance_test.py  run_tests.py  test_agents.py  verify_setup.py
tests/unit/: test_collaboration_orchestrator.py  test_debate_system.py
tests/unit/test_agents/: test_base_agent.py
tests/unit/test_orchestrator/: test_debate.py  test_orchestrator.py
tests/unit/test_persistence/: test_database.py
tests/unit/test_ui/: test_display.py
